--- a/templates/interface.html
+++ b/templates/interface.html
@@ -34,10 +34,10 @@
     </head>
     <hgroup class="mb30">
         <h1><center>Songs Metaphor Search Engine</center></h1>
-        <h2 class="lead"><center>Enter your idea</center></strong></h2>
+        <h2 class="lead"><center>Enter your text</center></strong></h2>
     </hgroup>
 	<form action="http://127.0.0.1:5000/" method="post" align="center">
-		<input type="text" class="searchTerm" name="searchTerm"  placeholder="Enter you idea">
+		<input type="text" class="searchTerm" name="searchTerm"  placeholder="">
     	<input type="submit" value="Search">
 	</form>
 
